Fix transition animation overflow-x

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,7 +5,7 @@
 @import "tailwindcss/utilities"; //
 
 #app {
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .fade-enter,
